<resources>
    <string name="app_name">Android Labs</string>
    <string name="firstText">Type your email address here:</string>
    <string name="secondText">Type your password here:</string>
    <string name="Edit_Text">Type email here</string>
    <string name="ButtonText">Login</string>
    <string name="textView2">Your profile</string>
    <string name="textView3">Your name:</string>
    <string name="editText3">Enter your name</string>
    <string name="textView4">Your email:</string>
    <string name="editText4">Enter your email</string>
    <string name="textView5">Your picture:</string>
    <string name="textView6">Click the button above to take a picture</string>
    <string name="button2">Go to chat</string>
    <string name="send">SEND</string>
    <string name="receive">RECEIVE</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="yes_message">The message has been deleted</string>
    <string name="no_message">The message has not been deleted</string>
    <string name="delete">Do you want to delete this?</string>
    <string name="row_selected">The selected row is: </string>
    <string name="database_id">The database id is: </string>
    <string name="text">Type here</string>
    <string name="CheckBox_Text">Check this out</string>
    <string name="Switch_Text">Switch on/off</string>
    <string name="toast_message">Here is more information!</string>
    <string name="snackbar__true">The switch is now </string>
    <string name="snackbar_false">The switch is off</string>
    <string name="action_message">Undo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">open</string>
    <string name="close">close</string>
</resources>
