<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:layout_alignParentEnd="true">


  <TextView
      android:id="@+id/textView"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/firstText"
      android:textSize="30dp" />


  <Button
      android:id="@+id/button"
      android:layout_below="@id/textView"
      android:layout_width="200dp"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:text="@string/ButtonText" />

  <CheckBox
      android:id="@+id/checkBox"
      android:layout_below="@id/textView"
      android:layout_toRightOf="@id/button"
      android:layout_marginTop="10dp"
      android:layout_width="200dp"
      android:layout_height="wrap_content"
      android:checked="true"
      android:gravity="fill"
      android:text="@string/CheckBox_Text"
      />

  <ImageView
      android:id="@+id/imageView"
      android:layout_below="@id/button"
      android:layout_width="200dp"
      android:layout_height="wrap_content"
      android:src="@drawable/flag" />

  <Switch
      android:id="@+id/switch1"
      android:layout_width="200dp"
      android:layout_height="wrap_content"
      android:layout_below="@id/button"
      android:layout_marginTop="10dp"
      android:layout_toRightOf="@id/imageView"
      android:text="@string/Switch_Text"
      />


  <EditText
      android:id="@+id/editText"
      android:layout_below="@id/imageView"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="textPersonName"
      android:text="@string/Edit_Text"/>

</RelativeLayout>