<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:columnCount="2"
    android:rowCount="4">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:textSize="30dp"
        android:text="@string/firstText"/>


    <Button
        android:id="@+id/button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:gravity="center"
        android:text="@string/ButtonText" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:checked="true"
        android:gravity="fill"
        android:text="@string/CheckBox_Text"
        />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:src="@drawable/flag" />


    <Switch
        android:id="@+id/switch1"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_row="2"

        android:layout_column="1"
        android:layout_marginTop="10dp"
        android:text="@string/Switch_Text"
       />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:inputType="textPersonName"
        android:text="@string/Edit_Text"/>

</GridLayout>